<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mandiri_apps_ui_template_5_foto_ktp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/videocallguide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/myriadfonts"
            android:text="@string/vidcall_guide_title"
            android:textColor="@color/mandiriBlue"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/videocallguide_desc_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/myriadfonts"
            android:gravity="center_horizontal"
            android:text="@string/vidcall_guide_desc_1"
            android:textColor="@color/mandiriBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videocallguide_iv_ktp" />

        <Button
            android:id="@+id/videocallguide_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/gradient_mandiri_blue"
            android:fontFamily="@font/myriadfonts"
            android:minWidth="180dp"
            android:text="@string/vidcall_guide_title"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videocallguide_desc_2" />

        <ImageView
            android:id="@+id/TitleUnderline"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videocallguide_title"
            app:srcCompat="@android:color/holo_blue_dark" />

        <ImageView
            android:id="@+id/videocallguide_iv_ktp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TitleUnderline"
            app:srcCompat="@drawable/mandiri_apps_ui_template_8_video_call_icon" />

        <Button
            android:id="@+id/videocallguide_btn_opencam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="128dp"
            android:layout_marginRight="128dp"
            android:background="@drawable/gradient_mandiri_yellow"
            android:minWidth="180dp"
            android:text="@string/complete_task"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videocallguide_btn_next" />

        <TextView
            android:id="@+id/videocallguide_tv_callReff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vidcall_guide_code"
            android:textAllCaps="false"
            android:capitalize="none"
            android:fontFamily="@font/myriadfonts"
            android:gravity="center_horizontal"
            android:textColor="@color/mandiriBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/yellow_mandiri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videocallguide_desc_title" />

        <TextView
            android:id="@+id/videocallguide_desc_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/myriadfonts"
            android:gravity="center_horizontal"
            android:text="@string/vidcall_guide_desc_2"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videocallguide_tv_callReff" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>