<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mandiri_apps_ui_template_2_daftar"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/initSess_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/myriadfonts"
            android:text="Daftar"
            android:textColor="@color/mandiriBlue"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/TitleUnderline"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/initSess_title"
            app:srcCompat="@android:color/holo_blue_dark" />
        <TextView
            android:id="@+id/OtpScr_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/myriadfonts"
            android:text="@string/email"
            android:textColor="@color/mandiriBlue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TitleUnderline" />

        <EditText
            android:id="@+id/initSess_et_email"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/textbox_gray"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OtpScr_desc_title" />

        <TextView
            android:id="@+id/initSess_tv_nik"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/myriadfonts"
            android:text="@string/nik"
            android:textColor="@color/mandiriBlue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/initSess_et_email" />

        <EditText
            android:id="@+id/initSess_et_nik"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/textbox_gray"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/initSess_tv_nik" />

        <TextView
            android:id="@+id/initSess_tv_nomor_hp"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/myriadfonts"
            android:text="@string/phone_number"
            android:textColor="@color/mandiriBlue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/initSess_et_nik" />

        <EditText
            android:id="@+id/initSess_et_nomor_hp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/textbox_gray"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/initSess_tv_nomor_hp" />

        <TextView
            android:id="@+id/initSess_tv_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/myriadfonts"
            android:text="@string/tgl_lahir"
            android:textColor="@color/mandiriBlue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/initSess_et_nomor_hp" />

        <Spinner
            android:id="@+id/spinner_thn_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/tanggal"
            app:layout_constraintStart_toEndOf="@+id/spinner_bln_lahir"
            app:layout_constraintTop_toBottomOf="@+id/initSess_tv_dob" />

        <Spinner
            android:id="@+id/spinner_bln_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/tanggal"
            app:layout_constraintStart_toEndOf="@+id/spinner_tgl_lahir"
            app:layout_constraintTop_toBottomOf="@+id/initSess_tv_dob" />

        <Spinner
            android:id="@+id/spinner_tgl_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/tanggal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/initSess_tv_dob" />

        <Button
            android:id="@+id/initSess_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/gradient_mandiri_blue"
            android:fontFamily="@font/myriadfonts"
            android:minWidth="180dp"
            android:text="@string/next_bt"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_tgl_lahir" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>